--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -141,6 +141,25 @@ jobs:
           name: ${{ env.PKG_NAME }}
           path: pkg/*
 
+  MACOS:
+    strategy:
+      fail-fast: false
+      matrix:
+        include:
+          - cc: Clang
+            arch: x64
+    name: Macos / ${{ matrix.cc }} / ${{ matrix.arch }}
+    runs-on: macos-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Build and related stuff, backup binaries
+        run: make  -C projects/unix/ OS=MINGW OSD=0 VULKAN=0 NETPLAY=0 OPENCV=0 V=1 OPTFLAGS="-Og -DXXH_NO_INLINE_HINTS" WARNFLAGS="" DEBUG=1 DEBUGGER=0 all 
+      - name: Upload artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: ${{ env.PKG_NAME }}
+          path: projects/unix/*.dylib
+
   Nightly-build:
     runs-on: ubuntu-latest
     if: github.ref_name == 'master'
