--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -152,7 +152,7 @@ jobs:
     runs-on: macos-13
     steps:
       - uses: actions/checkout@v4
-      - run: brew install sdl2
+      - run: brew install sdl2 nasm
       - name: Build and related stuff, backup binaries
         run: make  -C projects/unix/ OS=OSX OSD=0 VULKAN=0 NETPLAY=0 OPENCV=0 V=1 OPTFLAGS="-Og -DXXH_NO_INLINE_HINTS" WARNFLAGS="" DEBUG=1 DEBUGGER=0 all 
       - name: Upload artifact
