--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -158,7 +158,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
-          name: ${{ env.PKG_NAME }}
+          name: ${{ github.event.repository.name }}-${{ runner.os }}-${{ matrix.cc }}-${{ matrix.arch }}
           path: projects/unix/*.dylib
 
   Nightly-build:
